<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        tools:ignore="ExtraText"
        android:paddingLeft="20dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_marginTop="30dp"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/gioithieu"
            android:textSize="30sp"
            android:layout_marginTop="5dp"
            android:paddingBottom="0dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/about1"
            android:textSize="15sp"
            tools:ignore="SmallSp"
            android:paddingBottom="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"/>

        ///////////////////////////////

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/gioithieu2"
            android:textStyle="bold"
            android:textSize="30sp"
            android:paddingBottom="0dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/about2"
            android:textSize="15sp"
            tools:ignore="SmallSp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/about3"
            android:textSize="15sp"
            tools:ignore="SmallSp"
            android:textColor="@color/colorPrimary"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/about4"
            android:textSize="15sp"
            tools:ignore="SmallSp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/about5"
            android:textSize="15sp"
            tools:ignore="SmallSp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>