<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LL4"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/img1"
            android:contentDescription="@string/introduce" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="541dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LL4"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="COLLECTION"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/LL2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/product"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/img2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/prd1"></TextView>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/product"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/img5" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/prd5"></TextView>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/product"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/img6" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/prd6"></TextView>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <ImageView
                        android:id="@+id/img6"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/product"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/img8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/prd8"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@id/LL4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:contentDescription="@string/product"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/img3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/prd2"></TextView>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:contentDescription="@string/product"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/img4" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/prd4"></TextView>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:contentDescription="@string/product"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/img7" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/prd7"></TextView>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:contentDescription="@string/product"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/img9" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/prd2"></TextView>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
